--- a/index.html
+++ b/index.html
@@ -3,13 +3,59 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Yong Xuan's Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1> 
-    <a href="aboutme.html"><p>go to about page</p></a>
-    <img src="images/Untitled-1.png" alt="mickey" class="img-thumbnail">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <header id="header" class="fixed-top">
+      <div class="container-fluid d-flex justify-content-between align-items-center">
+        <h1 class="logo me-auto me-lg-0">
+          <a href="index.html">Yong Xuan</a>
+        </h1>
+        <nav id="navbar" class="navbar order-last order-lg-0">
+          <ul>
+            <li>
+              <a class="active" href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="about.html">About</a>
+            </li>
+            <li>
+              <a href="resume.html">Resume</a>
+            </li>
+            <li>
+              <a href="services.html">Services</a>
+            </li>
+            <li>
+              <a href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
+          </ul> 
+          <i class="bi bi-list mobile-nav-toggle">
+          </i>
+        </nav>
+      <div class="header-social-links">
+        <a href="#" class="twitter">
+          <i class="bi bi-twitter">
+          </i>
+        </a> 
+        <a href="#" class="facebook">
+          <i class="bi bi-facebook">
+          </i>
+        </a>
+        <a href="#" class="instagram">
+          <i class="bi bi-instagram">
+          </i>
+        </a>
+        <a href="#" class="linkedin">
+          <i class="bi bi-linkedin">
+          </i>
+        </a>
+      </div>
+      </div>
+
+    </header>
   </body>
 </html>
