--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<iframe id="preview-frame" class="preview-desktop" src="https://bootstrapmade.com/demo/templates/Kelly/" frameborder="0">
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -77,4 +78,5 @@
     <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP"></script>
     <script>if( window.self == window.top ) { window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP'); }</script>
   </body>
+</iframe>
 </html>
