--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<iframe id="preview-frame" class="preview-desktop" src="https://bootstrapmade.com/demo/templates/Kelly/" frameborder="0">
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -20,6 +19,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
   </head>
   <body data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos-delay="0">
+    <iframe id="preview-frame" class="preview-desktop" src="https://bootstrapmade.com/demo/templates/Kelly/" frameborder="0">
     <header id="header" class="fixed-top">
       <div class="container-fluid d-flex justify-content-between align-items-center">
         <h1 class="logo me-auto me-lg-0">
@@ -77,6 +77,10 @@
     <script src="assets/js/main.js"></script>
     <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP"></script>
     <script>if( window.self == window.top ) { window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP'); }</script>
+    </iframe>
+    <script src="https://bootstrapmade.com/assets/js/demo-4.3.js"></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP"></script>
+    <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP');</script>
   </body>
-</iframe>
+
 </html>
