--- a/index.html
+++ b/index.html
@@ -1,86 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Yong Xuan's Website</title>
-    <meta name="robots" content="noindex, nofollow">
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kelly Bootstrap Template Demo</title>
+  <meta name="robots" content="noindex, nofollow">
+    <link rel="stylesheet" href="https://bootstrapmade.com/assets/css/demo-4.3.css">
   </head>
-  <body data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos-delay="0">
-    <iframe id="preview-frame" class="preview-desktop" src="https://bootstrapmade.com/demo/templates/Kelly/" frameborder="0">
-    <header id="header" class="fixed-top">
-      <div class="container-fluid d-flex justify-content-between align-items-center">
-        <h1 class="logo me-auto me-lg-0">
-          <a href="index.html">Kelly</a>
-        </h1>
-        <nav id="navbar" class="navbar order-last order-lg-0">
-          <ul><li><a class="active" href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          </ul> <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav>
-          <div class="header-social-links">
-            <a href="#" class="twitter">
-              <i class="bi bi-twitter"></i>
-            </a>
-          <a href="#" class="facebook">
-            <i class="bi bi-facebook"></i>
-          </a> 
-          <a href="#" class="instagram">
-            <i class="bi bi-instagram"></i>
-          </a>
-          <a href="#" class="linkedin">
-            <i class="bi bi-linkedin"></i>
-          </a>
+
+<body>
+  <header id="header">
+
+    <div class="logo">
+      <a href="https://bootstrapmade.com/" rel="home" title="Free Bootstrap Themes and Website Templates" title="Back to BootstrapMade Homepage"><img alt="BootstrapMade" src="https://bootstrapmade.com/assets/img/logo.png"></a>
+    </div>
+    <div class="preview-devices">
+      <ul>
+        <li class="preview-test preview-devices-active" id="preview-test-desktop" title="Desktop preview of the  Kelly template"><a href=""><svg class="icon icon-preview"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#preview"/></svg></a></li>
+        <li class="preview-test" id="preview-test-tablet" title="Tablet preview of the Kelly template"><a href=""><svg class="icon icon-tablet"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#tablet"/></svg></a></li>
+        <li class="preview-test" id="preview-test-mobile" title="Mobile preview of the Kelly template"><a href=""><svg class="icon icon-smartphone"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#smartphone"/></svg></a></li>
+      </ul>
+    </div>
+
+    <div class="current-template">
+              <a href="https://bootstrapmade.com/demo/Mentor/" title="Previous Template: Mentor" target="_top"><svg class="icon icon-chevron-left"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#chevron-left"/></svg></a>
+            <a class="template-home" href="https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/" title="Kelly Template Home Page">Kelly</a>
+            <a href="https://bootstrapmade.com/demo/Medicio/" title="Next Template: Medicio" target="_top"><svg class="icon icon-chevron-right"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#chevron-right"/></svg></a>
           </div>
-      </div>
-    </header>
-    <section id="hero" class="d-flex align-items-center">
-      <div class="container d-flex flex-column align-items-center aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
-        <h1>Kelly Adams</h1>
-        <h2>I'm a professional illustrator from San Francisco</h2>
-        <a href="about.html" class="btn-about">About Me</a>
-      </div>
-    </section>
-    <footer id="footer">
-      <div class="container">
-        <div class="copyright"> © Copyright <strong><span>Kelly</span></strong>. All Rights Reserved</div>
-        <div class="credits"> Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a></div>
-      </div>
-    </footer>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
-      <i class="bi bi-arrow-up-short"></i>
-    </a>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP"></script>
-    <script>if( window.self == window.top ) { window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP'); }</script>
-    </iframe>
-    <script src="https://bootstrapmade.com/assets/js/demo-4.3.js"></script>
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP"></script>
-    <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP');</script>
-  </body>
+    
+    <div class="navigate">
+      <a href="https://bootstrapmade.com/demo/templates/Kelly/" target="_top" title="Hide the demo bar"><svg class="icon icon-external-link"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#external-link"/></svg></a>
+      <a class="download" href="https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/#download" title="Download the Kelly Template"><svg class="icon icon-download"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#download"/></svg> <span>Free Download</span></a>
+    </div>
+
+  </header>
+
+
+  <div id="preview">
+    <iframe id="preview-frame" class="preview-desktop" src="https://bootstrapmade.com/demo/templates/Kelly/" frameborder="0"></iframe>
+  </div>
+
+      <script src="https://bootstrapmade.com/assets/js/demo-4.3.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP"></script><script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP');</script>
+</body>
 
 </html>
