--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=5.0">
-  <title>Kelly Bootstrap Template Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Folio Bootstrap Template Demo</title>
   <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="https://bootstrapmade.com/assets/css/demo-4.3.css">
   </head>
@@ -17,28 +18,28 @@
     </div>
     <div class="preview-devices">
       <ul>
-        <li class="preview-test preview-devices-active" id="preview-test-desktop" title="Desktop preview of the  Kelly template"><a href=""><svg class="icon icon-preview"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#preview"/></svg></a></li>
-        <li class="preview-test" id="preview-test-tablet" title="Tablet preview of the Kelly template"><a href=""><svg class="icon icon-tablet"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#tablet"/></svg></a></li>
-        <li class="preview-test" id="preview-test-mobile" title="Mobile preview of the Kelly template"><a href=""><svg class="icon icon-smartphone"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#smartphone"/></svg></a></li>
+        <li class="preview-test preview-devices-active" id="preview-test-desktop" title="Desktop preview of the  Folio template"><a href=""><svg class="icon icon-preview"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#preview"/></svg></a></li>
+        <li class="preview-test" id="preview-test-tablet" title="Tablet preview of the Folio template"><a href=""><svg class="icon icon-tablet"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#tablet"/></svg></a></li>
+        <li class="preview-test" id="preview-test-mobile" title="Mobile preview of the Folio template"><a href=""><svg class="icon icon-smartphone"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#smartphone"/></svg></a></li>
       </ul>
     </div>
 
     <div class="current-template">
-              <a href="https://bootstrapmade.com/demo/Mentor/" title="Previous Template: Mentor" target="_top"><svg class="icon icon-chevron-left"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#chevron-left"/></svg></a>
-            <a class="template-home" href="https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/" title="Kelly Template Home Page">Kelly</a>
-            <a href="https://bootstrapmade.com/demo/Medicio/" title="Next Template: Medicio" target="_top"><svg class="icon icon-chevron-right"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#chevron-right"/></svg></a>
+              <a href="https://bootstrapmade.com/demo/eBusiness/" title="Previous Template: eBusiness" target="_top"><svg class="icon icon-chevron-left"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#chevron-left"/></svg></a>
+            <a class="template-home" href="https://bootstrapmade.com/folio-bootstrap-portfolio-template/" title="Folio Template Home Page">Folio</a>
+            <a href="https://bootstrapmade.com/demo/Alstar/" title="Next Template: Alstar" target="_top"><svg class="icon icon-chevron-right"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#chevron-right"/></svg></a>
           </div>
     
     <div class="navigate">
-      <a href="https://bootstrapmade.com/demo/templates/Kelly/" target="_top" title="Hide the demo bar"><svg class="icon icon-external-link"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#external-link"/></svg></a>
-      <a class="download" href="https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/#download" title="Download the Kelly Template"><svg class="icon icon-download"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#download"/></svg> <span>Free Download</span></a>
+      <a href="https://bootstrapmade.com/demo/templates/Folio/" target="_top" title="Hide the demo bar"><svg class="icon icon-external-link"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#external-link"/></svg></a>
+      <a class="download" href="https://bootstrapmade.com/folio-bootstrap-portfolio-template/#download" title="Download the Folio Template"><svg class="icon icon-download"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons.svg#download"/></svg> <span>Free Download</span></a>
     </div>
 
   </header>
 
 
   <div id="preview">
-    <iframe id="preview-frame" class="preview-desktop" src="https://bootstrapmade.com/demo/templates/Kelly/" frameborder="0"></iframe>
+    <iframe id="preview-frame" class="preview-desktop" src="https://bootstrapmade.com/demo/templates/Folio/" frameborder="0"></iframe>
   </div>
 
       <script src="https://bootstrapmade.com/assets/js/demo-4.3.js"></script>
