--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer id="footer">
       <div class="container">
         <div class="copyright"> &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved</div>
-        <div class="credits"> Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a></div>
+        <div class="credits"> Designed by <p>Lai Yong Xuan</p></div>
       </div>
     </footer>
     <div id="preloader"></div>
