--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
       <i class="bi bi-arrow-up-short"></i></a>
       <script src="script.txt"></script>
-      <script src="assets/vendor/aos/aos.js"></script>
-      <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-      <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-      <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-      <script src="assets/vendor/waypoints/noframework.waypoints.js"></script> 
-      <script src="assets/vendor/php-email-form/validate.js"></script>  
-      <script src="assets/js/main.js"></script> 
-      <script async src='https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP'></script>
+      <script src="script2.txt"></script>
+      <script src="script3.txt"></script>
+      <script src="script4.txt"></script>
+      <script src="script5.txt"></script>
+      <script src="script6.txt"></script>
+      <script src="script7.txt"></script> 
+      <script src="script8.txt"></script>  
+      <script src="script9.txt"></script> 
+      <script async src='script10.txt'></script>
       <script>if( window.self == window.top ) { window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP'); }</script> 
   </body>
 </html>
