--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="script12.txt" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/css/style.css" rel="stylesheet">
   </head>
   <body>
     <header id="header" class="fixed-top">
