--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <div class="header-social-links">
-          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="images/twitter.png" class="twitter"><i class="bi bi-twitter"></i></a>
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+          <a href="#" class="whatsapp"><i class="bi bi-linkedin"></i></i></a>
         </div>
       </div>
     </header>
