--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <div class="header-social-links">
-          <a href="images/twitter.png" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="twitter"><img src="images/twitter.png"><i class="bi bi-twitter"></i></a>
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="#" class="whatsapp"><i class="bi bi-linkedin"></i></i></a>
