--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <div class="header-social-links">
-          <a href="#" class="twitter"><img src="images/twitter.png"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="#" class="whatsapp"><i class="bi bi-linkedin"></i></i></a>
@@ -45,20 +45,20 @@
     </header>
     <section id="hero" class="d-flex align-items-center">
       <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
-        <h1>Kelly Adams</h1>
-        <h2>I'm a professional illustrator from San Francisco</h2>
+        <h1>Yong Xuan</h1>
+        <h2>I'm a professional Digital Media Designer from Malaysia</h2>
         <a href="about.html" class="btn-about">About Me</a>
       </div>
     </section>
     <footer id="footer">
       <div class="container">
-        <div class="copyright"> &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved</div>
-        <div class="credits"> Designed by <p>Lai Yong Xuan</p></div>
+        <div class="copyright"> &copy; Copyright <strong><span>Yong Xuan</span></strong>. All Rights Reserved</div>
+        <div class="credits"> Designed by <p>Yong Xuan</p></div>
       </div>
     </footer>
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
-      <i class="bi bi-arrow-up-short"></i></a>
+    <i class="bi bi-arrow-up-circle-fill"></i></a>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/purecounter/purecounter_vanilla.js"></script>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/aos/aos.js"></script>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
