--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header id="header" class="fixed-top">
       <div class="container-fluid d-flex justify-content-between align-items-center">
         <h1 class="logo me-auto me-lg-0">
-          <a href="index.html">Kelly</a>
+          <a href="index.html">YX</a>
         </h1>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
@@ -33,7 +33,6 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul> 
-          <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <div class="header-social-links">
           <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -44,7 +43,7 @@
       </div>
     </header>
     <section id="hero" class="d-flex align-items-center">
-      <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
+      <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="50">
         <h1>Yong Xuan</h1>
         <h2>I'm a professional Digital Media Designer from Malaysia</h2>
         <a href="about.html" class="btn-about">About Me</a>
@@ -58,7 +57,8 @@
     </footer>
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
-    <i class="bi bi-arrow-up-circle-fill"></i></a>
+      <img src="images/arrow up.png" width="55" height="55">
+    </a>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/purecounter/purecounter_vanilla.js"></script>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/aos/aos.js"></script>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
