--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -29,16 +28,15 @@
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="services.html">Services</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul> 
         </nav>
         <div class="header-social-links">
-          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="whatsapp"><i class="bi bi-linkedin"></i></i></a>
+          <a href="http://m.me/lai.yongxuan.3/" target="_blank"><img src="images/messenger.png" width="17" height="16"></a>
+          <a href="https://www.facebook.com/lai.yongxuan.3/" target="_blank"><img src="images/facebook.png" width="17" height="16"></a>
+          <a href="https://www.instagram.com/yongxuan_03/" target="_blank"><img src="images/insta.png" width="17" height="16"></a>
+          <a href="https://wa.link/pg2ea4" target="_blank"><img src="images/whatsapp.png" width="17" height="16"></a>
         </div>
       </div>
     </header>
@@ -61,9 +59,7 @@
     </a>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/purecounter/purecounter_vanilla.js"></script>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/aos/aos.js"></script>
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/glightbox/js/glightbox.min.js"></script>
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/swiper/swiper-bundle.min.js"></script>
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/waypoints/noframework.waypoints.js"></script> 
       <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/php-email-form/validate.js"></script>  
