--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <header id="header" class="fixed-top">
@@ -23,20 +25,37 @@
         <h1 class="logo me-auto me-lg-0">
           <a href="index.html">YX</a>
         </h1>
-        <nav id="navbar" class="navbar order-last order-lg-0">
-          <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul> 
-        </nav>
+        
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Resume</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
         <div class="header-social-links">
-          <a href="http://m.me/lai.yongxuan.3/" target="_blank"><img src="images/messenger.png" width="17" height="16"></a>
-          <a href="https://www.facebook.com/lai.yongxuan.3/" target="_blank"><img src="images/facebook.png" width="17" height="16"></a>
-          <a href="https://www.instagram.com/yongxuan_03/" target="_blank"><img src="images/insta.png" width="17" height="16"></a>
-          <a href="https://wa.link/pg2ea4" target="_blank"><img src="images/whatsapp.png" width="17" height="16"></a>
+          <a href="https://www.facebook.com/lai.yongxuan.3/" target="_blank" class="fa fa-facebook"></a>
+          <a href="https://www.instagram.com/yongxuan_03/" target="_blank" class="fa fa-instagram"></a>
+          <a href="https://wa.link/pg2ea4" target="_blank" class="fa fa-whatsapp"></a>
         </div>
       </div>
     </header>
