--- a/index.html
+++ b/index.html
@@ -1,64 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Yong Xuan's Website</s></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Yong Xuan's Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <meta name="robots" content="noindex, nofollow">
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-    <link href="images/favicon.png" rel="icon">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <meta content="" name="keywords"><link href="images/favicon.png" rel="icon">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
   </head>
   <body>
-    <header id="header" class="fixed-top">
-      <div class="container-fluid d-flex justify-content-between align-items-center">
-        <h1 class="logo me-auto me-lg-0">
-          <a href="index.html">YX</a>
-        </h1>
-        
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Resume</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
-            </li>
-          </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg fixed-top ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">YX</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav mx-auto">
+              <a class="nav-link active" aria-current="page" href="index.html"><li>Home</li></a>
+              <a class="nav-link" href="about.html"><li>About</li></a>
+              <a class="nav-link" href="resume.html"><li>Resume</li></a>
+              <a class="nav-link" href="portfolio.html"><li>Portfolio</li></a>
+              <a class="nav-link" href="contact.html"><li>Contact</li></a>
+            </div>
+          </div>
+          <div class="header-social-links">
+            <a href="https://www.facebook.com/lai.yongxuan.3/" target="_blank" class="fa fa-facebook"></a>
+            <a href="https://www.instagram.com/yongxuan_03/" target="_blank" class="fa fa-instagram"></a>
+            <a href="https://wa.link/pg2ea4" target="_blank" class="fa fa-whatsapp"></a>
+          </div>
         </div>
-      </div>
-    </nav>
-        <div class="header-social-links">
-          <a href="https://www.facebook.com/lai.yongxuan.3/" target="_blank" class="fa fa-facebook"></a>
-          <a href="https://www.instagram.com/yongxuan_03/" target="_blank" class="fa fa-instagram"></a>
-          <a href="https://wa.link/pg2ea4" target="_blank" class="fa fa-whatsapp"></a>
-        </div>
-      </div>
+      </nav>
     </header>
+
     <section id="hero" class="d-flex align-items-center">
       <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="50">
         <h1>Yong Xuan</h1>
@@ -66,7 +45,8 @@
         <a href="about.html" class="btn-about">About Me</a>
       </div>
     </section>
-    <footer id="footer">
+
+    <footer class="footer">
       <div class="container">
         <div class="copyright"> &copy; Copyright <strong><span>Yong Xuan</span></strong>. All Rights Reserved</div>
         <div class="credits"> Designed by <p>Yong Xuan</p></div>
@@ -76,14 +56,8 @@
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
       <img src="images/arrow up.png" width="55" height="55">
     </a>
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/aos/aos.js"></script>
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/glightbox/js/glightbox.min.js"></script>
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/swiper/swiper-bundle.min.js"></script>
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/waypoints/noframework.waypoints.js"></script> 
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/vendor/php-email-form/validate.js"></script>  
-      <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/js/main.js"></script> 
-      <script async src='https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP'></script>
-      <script>if( window.self == window.top ) { window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP'); }</script> 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://bootstrapmade.com/demo/templates/Kelly/assets/js/main.js"></script> 
   </body>
 </html>
