add all paages link

--- a/about.html
+++ b/about.html
@@ -48,12 +48,12 @@
                     <div class="container" data-aos="fade-up">
                         <div class="section-title">
                             <h2>About</h2>
-                            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                            <p>I'm here to help you show off any products in a way that stops your audience in their tracks, makes them salivate and want what they see. </p>
                         </div>
                         <div class="row"><div class="col-lg-4"> <img src="images/4.png" class="img-fluid" alt=""></div>
                         <div class="content col-lg-8 pt-4 pt-lg-0 ">
                             <h3>Digital Media Designer</h3>
-                            <p class="fst-italic"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <p class="fst-italic"> I'm experienced creating outstanding design for Hotel, Magazines, Brands and Website. My style is contemporary, organic and sometimes minimalistic.</p>
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
@@ -79,7 +79,7 @@
                                 </ul>
                             </div>
                             </div>
-                        <p> Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis. Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.</p>
+                        <p> If you'd like to hire me, enquire about my rates or give me feedback of any kind, I'll be delighted to hear from you. I'm hanging out a lot on instagram, and will answer all your questions through a DM if that is more practical for you!</p>
                         </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                     <div class="container" data-aos="fade-up">
                         <div class="section-title">
                             <h2>Skills</h2>
-                            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                            <p>That's a lot of different technique to learn, but it's all in service of putting the spotlight on incredible people, businesses and organizations that make this world a better place!</p>
                         </div>
                         <div class="row skills-content">
                             <div class="col-lg-6">
