--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
                 <div class="container" data-aos="fade-up">
                     <div class="section-title">
                         <h2>Resume</h2>
-                        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                        <p>As an experienced Digital Media Designer, I'd love to let your product shine in it's absolutely best light. I use my technique to show the beauty of your product in an organic, minimalist and contemporary way.</p>
                     </div>
                     <div class="row">
                         <div class="col-lg-6">
@@ -56,8 +56,8 @@
                             <div class="resume-item">
                                 <h4>Diploma in Digital Media</h4>
                                 <h5>2021-2024</h5>
-                                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                                <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                                <p><em>Dasein Academy of Art, Malaysia</em></p>
+                                <p>Dasein Academy of Art, where the seeds of art and creativity are sowed by enthusiastic educators and artists.</p>
                             </div>
                         </div>
                     </div>
