--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                                     <li><i class="bi bi-rounded-right"></i> 
                                     <strong>Education:</strong> Diploma</li>
                                     <li><i class="bi bi-rounded-right"></i> 
-                                    <strong>Email:</strong><a href="mailto:yongxuan213012@dasein.edu.my"> Click Here</li></a>
+                                    <strong>Email:</strong><a href="mailto:yongxuan213012@dasein.edu.my"> yongxuan213012@dasein.edu.my</li></a>
                                     <i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                                 </ul>
                             </div>
